--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@contentful/gatsby-transformer-contentful-richtext": "^13.0.0",
     "gatsby": "^2.0.107",
     "gatsby-image": "^2.0.29",
+    "gatsby-plugin-google-analytics": "^2.0.16",
     "gatsby-plugin-manifest": "^2.0.16",
     "gatsby-plugin-offline": "^2.0.24",
     "gatsby-plugin-react-helmet": "^3.0.5",
@@ -20,6 +21,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
+    "react-ga": "^2.5.7",
     "react-helmet": "^5.2.0",
     "react-parallax": "^2.1.0",
     "typeface-playfair-display": "0.0.54",
